--- a/master_app/templates/master_app/Army_Design_Bureau.html
+++ b/master_app/templates/master_app/Army_Design_Bureau.html
@@ -47,7 +47,7 @@
         
                            </div>               
                             <!-- //container -->
-                        </div><ocid-button-p class="ocid-button-p" id="downloadButton_https://indianarmy.nic.in/assets/img/sub-header/subheader-2.jpg__0"><ocidbutton class="ocid-dl-button-1-1 ocid-dl-button-1-8 ocid-dl-button-9-1 ocid-dl-button-1-4 ocid-dl-button-1-9 ocid-dl-button-9-2"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-down" class="svg-inline--fa fa-arrow-down fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"></path></svg></ocidbutton></ocid-button-p>
+                        </div>
                         <!-- //page-title-wrapper -->
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                             <div class="col-sm-12">
                                 <div class="row">
 	<div class="col-md-12">
-		<img class="img-100p" src="{% static 'assets/img/ADB_Pg_Photo.png' %}"><ocid-button-p class="ocid-button-p" id="downloadButton_https://indianarmy.nic.in/writereaddata/images/ADB_Pg_Photo.png__0"><ocidbutton class="ocid-dl-button-1-1 ocid-dl-button-1-8 ocid-dl-button-7-1 ocid-dl-button-1-5 ocid-dl-button-1-9 ocid-dl-button-7-2"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check" class="svg-inline--fa fa-check fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"></path></svg></ocidbutton></ocid-button-p></div>
+		<img class="img-100p" src="{% static 'assets/img/ADB_Pg_Photo.png' %}"></div>
 </div>
 <div class="row">
 	<div class="col-md-6">
