--- a/master_app/templates/master_app/Tender_and_RFI.html
+++ b/master_app/templates/master_app/Tender_and_RFI.html
@@ -46,7 +46,7 @@
                                 <h5 class="pull-left title"><span class="cat-icon"><i class="fa fa-newspaper-o"></i></span>Tender and RFI</h5><ol class="breadcrumb pull-right"><li><a href="#!"><span>Home</span></a></li><li class="active"><a href="#!">Tender and RFI</a></li><li class="active"><a href="#!">Tenders</a></li></ol>
     
                             </div> <!-- //container -->
-                        </div><ocid-button-p class="ocid-button-p" id="downloadButton_https://indianarmy.nic.in/assets/img/sub-header/subheader-2.jpg__0"><ocidbutton class="ocid-dl-button-1-1 ocid-dl-button-1-8 ocid-dl-button-9-1 ocid-dl-button-1-4 ocid-dl-button-1-9 ocid-dl-button-9-2"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-down" class="svg-inline--fa fa-arrow-down fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"></path></svg></ocidbutton></ocid-button-p> <!-- //page-title-wrapper -->
+                        </div> <!-- //page-title-wrapper -->
                     </div>
                 </div> <!-- //row -->
             </section>
