--- a/master_app/templates/master_app/IMA_Campus_and_Landmarks.html
+++ b/master_app/templates/master_app/IMA_Campus_and_Landmarks.html
@@ -43,7 +43,7 @@
                     <div class="col-sm-12">
                         <div class="page-title-wrapper page-title-wrapper2">
                             <div class="container">
-                                 <h5 class="pull-left title"><span class="cat-icon"><i class="fa fa-newspaper-o"></i></span>IMA</h5><ol class="breadcrumb pull-right"><li><a href="#!"><span>Home</span></a></li><li class="active"><a href="#!">Explore Army</a></li><li class="active"><a href="#!">Training Establishment</a></li><li class="active"><a href="#!">Army Establishments</a></li><li class="active"><a href="#!">IMA</a></li><li class="active"><a href="#!">Home</a></li></ol>
+                                 <h5 class="pull-left title"><span class="cat-icon"><i class="fa fa-newspaper-o"></i></span>IMA</h5><ol class="breadcrumb pull-right"><li><a href="#!"><span>Home</span></a></li><li class="active"><a href="#!">Explore Army</a></li><li class="active"><a href="#!">Training Establishment</a></li><li class="active"><a href="#!">Army Establishments</a></li><li class="active"><a href="#!">IMA</a></li><li class="active"><a href="#!">IMA Campus and Landmarks</a></li></ol>
         
                            </div>               
                             <!-- //container -->
@@ -61,26 +61,41 @@
             <div class="row">
                 <div class="col-sm-9 ankc">
                     <div class="history-info">
-                        <p class="title" style="text-align:center;"><span id="ContentPlaceHolder1_lblSubHead">Home</span><span id="ContentPlaceHolder1_lblName"></span></p>
+                        <p class="title" style="text-align:center;"><span id="ContentPlaceHolder1_lblSubHead">IMA Campus and Landmarks</span><span id="ContentPlaceHolder1_lblName"></span></p>
                         <h2 class="subtitle"></h2>
                         <div class="row">
                             <div class="col-sm-12">
-                                <p><strong>The Indian Military Academy, Dehradun, trains Gentlemen Cadets for commissioning into the Indian Army, as also a large number of cadets from friendly foreign countries for their respective Armed forces.</strong></p>
-<p><strong>The Academy boasts of a glorious history, spanning eight decades. The professionalism and rich traditions are an integral part of the Nation's proud heritage, and have contributed to the development of a strong foundation of independent India.</strong></p>
-<p><strong>The path of leadership of troops is paved with immense challenges and is not a soft option in comparison to glamour and heraldry. The future officers of Indian Army pass out through the portals of the Indian Military Academy where rigorous training in leadership, self discipline and the art of war is imparted to them before they actually take their place as officers in command of troops. The alumni of the IMA have time and again displayed sterling qualities of character, leadership and gallantry often including the supreme sacrifice for the cause of the nation.</strong></p>
+                                <div align="center">
+	<table border="0" width="600" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+			<td>
+			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
+		</tr>
+<tr>
+			<td>
+			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
+		</tr>
 
-<p><img src="{% static 'assets/img/home1.jpg' %}" alt="" border="0"></p>
-<p>The professionalism of the alumni of the Academy was put to test in 1939, just a few years after the founding of the Academy, when Britain declared war against Nazi Germany and other Axis Powers.</p>
-<p>TRIAL &amp; TRIUMPH</p>
-<p><img src="{% static 'assets/img/home2.jpg' %}" alt="" border="0"></p>
-<p>The training modules aim to help them to learn more about camaraderie, esprit-de-corps and team spirit. These factors not only develop self confidence but also culminate in enhancing the ability and readiness of the trainees to assume leadership in critical situations.</p>
-<p>TRAINING @ I.M.A.</p>
-<p><img src="{% static 'assets/img/home3.jpg' %}" alt="" border="0"></p>
-<p>On admission to the Academy one is christened as ‘Gentleman Cadet’. The Academy plays a vital role in moulding the differences and helps them anchored into a common bonding. Doing things together brings a sense of fellow feeling.</p>
-<p>LIFE OF A 'GC'</p>
-<p><img src="{% static 'assets/img/home4.jpg' %}" alt="" border="0"></p>
-<p>The Sword of Honour is the most coveted recognition that a Gentleman Cadet (GC) aspires to possess. It is given for the best overall performance by a GC in Military Training, Academics, Sports and Extra Co-curricular activities.</p>
-<p>ROLL OF HONOUR</p>
+			<tr><td>
+			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
+		</tr>
+<tr>
+			<td>
+			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
+		</tr>
+		<tr>
+			<td>
+			<p style="margin-top: 0; margin-bottom: 0">
+			<font size="2" face="Verdana">Click <b>
+			<a href="{% static 'assets/pdfs/IMAcampus120516.pdf' %}">
+			here</a></b> to open.</font></p></td>
+		</tr>
+		<tr>
+			<td>
+			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
+		</tr>
+	</tbody></table>
+</div>
                             </div>
                         </div>
                         <!-- //row -->
@@ -98,13 +113,13 @@
     <div style="overflow-x:hidden; overflow-y:scroll;">
     <ul class="popular-news-list">
         
-               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_0" href="{% url 'iam' %}">Home</a></li>
+               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_0" href="#!">Home</a></li>
             
-               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_1" href="{% url 'history' %}">History</a></li>
+               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_1" href="#!">History</a></li>
             
-               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_2" href="{% url 'commandants' %}">Commandants</a></li>
+               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_2" href="#!">Commandants</a></li>
             
-               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_3" href="{% url 'IMA_Campus_and_Landmarks' %}">IMA Campus and Landmarks</a></li>
+               <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_3" href="#!">IMA Campus and Landmarks</a></li>
             
                <li><a id="ContentPlaceHolder1_verticalmenu_rep1_hpl1_4" href="#!">Organisation</a></li>
             
